[gd_scene load_steps=8 format=3 uid="uid://uo5m3utkvbp1"]

[ext_resource type="Theme" uid="uid://b6vsi06ylv2at" path="res://scripts/styles/main_menu.tres" id="1_ixiit"]
[ext_resource type="Script" path="res://scripts/menu/collection_menu.gd" id="2_l3kxh"]
[ext_resource type="Texture2D" uid="uid://b2gyy6j7gnec" path="res://assets/board/wood-1700562_1920.png" id="3_fwa2n"]
[ext_resource type="PackedScene" uid="uid://s5y0n8ui2te5" path="res://scripts/card.tscn" id="3_mncui"]
[ext_resource type="Script" path="res://scripts/menu/collection/deck_list.gd" id="4_6e3ln"]
[ext_resource type="Script" path="res://scripts/menu/collection/deck_summary.gd" id="5_c01pw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_my57j"]
bg_color = Color(0.270222, 0.270222, 0.270222, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="CollectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ixiit")
script = ExtResource("2_l3kxh")
CardScene = ExtResource("3_mncui")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_fwa2n")

[node name="CardList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -580.0
offset_top = -415.0
offset_right = 580.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
max_columns = 3
same_column_width = true
icon_scale = 0.35

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 71.0
offset_right = 198.0
offset_bottom = 143.0
text = "Back"

[node name="DeckList" type="PanelContainer" parent="." node_paths=PackedStringArray("deckNameInputField")]
unique_name_in_owner = true
layout_mode = 2
offset_left = 68.0
offset_top = 200.0
offset_right = 344.0
offset_bottom = 1043.0
script = ExtResource("4_6e3ln")
deckNameInputField = NodePath("../DeckSummary/DeckNameInput")

[node name="VBoxContainer" type="VBoxContainer" parent="DeckList"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NewDeckButton" type="Button" parent="DeckList/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_my57j")
text = "New
"

[node name="DeckSummary" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 1561.0
offset_top = 58.0
offset_right = 1893.0
offset_bottom = 1058.0
theme_override_constants/separation = 16
script = ExtResource("5_c01pw")

[node name="CardSummary" type="PanelContainer" parent="DeckSummary"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DeckSummary/CardSummary"]
layout_mode = 2

[node name="DeckNameInput" type="LineEdit" parent="DeckSummary"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Deck name"
max_length = 20
editable = false
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true

[node name="SaveDeckButton" type="Button" parent="DeckSummary"]
unique_name_in_owner = true
layout_mode = 2
text = "Save"

[connection signal="item_selected" from="CardList" to="." method="_on_card_list_item_selected"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="DeckList/VBoxContainer/NewDeckButton" to="DeckList" method="_on_new_deck_button_pressed"]
[connection signal="text_changed" from="DeckSummary/DeckNameInput" to="." method="_on_deck_name_input_text_changed"]
[connection signal="pressed" from="DeckSummary/SaveDeckButton" to="." method="_on_save_button_pressed"]
